# House-Price-Prediction-Test-App-2-Inference

./: Makefile  pyproject.toml
.github/actions/build-application/: action.yml
.github/workflows/: lint.yaml
app/: run.py
app/api/: prediction.py
app/config/: .env  logger.py  model.py
app/schema/: appartment.py
app/services/: __init__.py  model_inference.py
